turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:16: error: not found: value brusDown
  brusDown()
  ^